Fixed button hover effect on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -249,6 +249,10 @@ section {
         transform: translateY(0vh);
     }
 
+    .nav--button:hover {
+        border-bottom: none;
+    }
+
     .nav-fixed--buttons-open {
         transform: translateY(0vh);
     }
